# Typing-meter

./: README.md
typing_meter/: BUILD.md  CONTRIBUTING.md  MANIFEST.in  setup.cfg  setup.py  tox.ini
typing_meter/docs/: Makefile  README.md
typing_meter/docs/source/: api.rst  conf.py  index.rst  installation.rst  usage.rst
typing_meter/tests/: conftest.py  test_history.py  test_typing.py
typing_meter/typing_meter/: __init__.py  __main__.py  _version.py  app.py  calculations.py  keycheck.py
typing_meter/typing_meter.egg-info/: PKG-INFO
